# multi-agent-doc-research-base

./: .env.example  .gitignore  README.md  pyproject.toml  test.input  test_sk.http
app/backend/: MAGENTIC_ARCHITECTURE.md  MAGENTIC_IMPLEMENTATION_SUMMARY.md  example_magentic.py  main.py  test_magentic_executor.py  test_upload_system.py
app/backend/ai_search/: document.json  initialize_ai_search.ipynb
app/backend/config/: config.py
app/backend/i18n/: locale_msg.py
app/backend/model/: models.py
app/backend/prompts/: general_answer_prompt.yaml  general_planner_prompt.yaml  intent_analyze_prompt.yaml  intent_analyze_prompt_ko.yaml  product_answer_prompt.yaml  research_analyst_prompt.yaml  research_planner_prompt.yaml  research_planner_prompt_kr.yaml  research_reviewer_prompt.yaml  research_reviewer_prompt_test.yaml  research_writer_prompt.yaml  research_writer_prompt_test.yaml
app/backend/services_afw/: README.md  README_MAGENTIC.md  __init__.py  ai_search_executor.py  doc_research_orchestrator_afw.py  grounding_executor.py  group_chatting_executor.py  magentic_executor.py  plan_search_orchestrator_afw.py  search_executor_afw.py  web_search_executor.py  youtube_executor.py
app/backend/services_sk/: README.md  ai_search_plugin.py  doc_research_orchestrator_sk.py  group_chatting_plugin.py  intent_plan_plugin.py  multi_agent_plugin.py  plan_search_executor_sk.py  plan_search_executor_sk_parallel.py  plan_search_orchestrator_sk.py  unified_file_upload_plugin.py  upload_doc_plugin.py  vanilla_multi_agent_plugin.py
app/backend/tests/: README.md  test_ai_search_afw.py  test_file_upload_system.py  test_grounding_afw.py  test_group_chat_afw.py  test_multi_agent_afw.py  test_orchestrator_afw.py  test_search_afw.py  test_youtube_afw.py
app/backend/utils/: json_control.py  token_counter.py  yield_message.py
app/frontend/: README.md  pyproject.toml  run_app.sh  run_chainlit.sh  run_with_upload.sh
infra/: main.bicep
(+9 files in other folders)
